kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chay-techs-frontend-service
  namespace: chay-techs-production
  labels:
    app: chay-techs-frontend
    environment: production
spec:
  selector:
    app: chay-techs-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
