kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chay-techs-ingress
  namespace: chay-techs-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
  - hosts:
    - chay-techs.com
    secretName: ingress-tls-ssl

  rules:
  - host: chay-techs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chay-techs-frontend-service
            port:
              number: 80
